Fixed something a bit in the script. Added text formatting in the notepad.
Text Formatting:
Bold: ctrl+b
Italic: ctrl+i
Underline: ctrl+u

I couldn't figure out how to add line breaks on the placeholder though, as I'm using a div on the notepad instead of a textarea

--- a/style.sass
+++ b/style.sass
@@ -113,7 +113,7 @@ body, html
 
     padding: 10px
     gap: 1px
-    overflow-y: scroll
+    overflow-y: auto
     scrollbar-gutter: stable
     &::-webkit-scrollbar
         width: 8px
@@ -179,7 +179,7 @@ body, html
     gap: 5px
     align-items: center
     border-radius: 10px 10px 0 0
-    overflow-x: scroll
+    overflow-x: auto
     margin-bottom: 5px
 
     &::-webkit-scrollbar
@@ -189,37 +189,41 @@ body, html
         background: #ffffff52
         border-radius: 40px
 
-#tabs-section .tab-box 
-    min-width: fit-content
-    box-sizing: border-box
-    font-size: 14px
+    & .tab-box 
+        min-width: fit-content
+        box-sizing: border-box
+        font-size: 14px
 
-    padding: 8px 15px 8px 15px
-    height: fit-content
-    
-    background: #ffffff57
-    filter: saturate(250%)
-    backdrop-filter: blur(50px)
-    /* background: none */
-    box-shadow: 3.5px 3.5px 5px rgba(0, 0, 0, 0.082)
+        padding: 8px 15px 8px 15px
+        height: fit-content
+        
+        background: #ffffff57
+        filter: saturate(250%)
+        backdrop-filter: blur(50px)
+        /* background: none */
+        box-shadow: 3.5px 3.5px 5px rgba(0, 0, 0, 0.082)
 
-    display: flex
-    text-align: center
-    align-items: center
-    border-radius: 110px
-    text-wrap: nowrap
-    text-overflow: ellipsis
-    overflow: hidden
-    white-space: nowrap
-    transition: transform 0.1s ease
+        display: flex
+        text-align: center
+        align-items: center
 
-#tabs-section .tab-box:hover 
-    height: 90%
+        border-radius: 1.25em
+
+        text-wrap: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
+        white-space: nowrap
+
+        transition: transform 0.1s ease
+        transform: translateY(0)
+        &:hover 
+            height: 90%
+            cursor: pointer
 
 #add-tab-btn 
     min-width: 30px
     height: 70%
-    border-radius: 14px
+    border-radius: 12px
 
     background: #ffffff3f
     filter: saturate(400%)
@@ -242,8 +246,8 @@ body, html
     cursor: pointer
 
     width: 30px
-    height: 80%
-    background: #ffffff17
+    background: rgba(255, 255, 255, 0.6)
+    transform: translateY(-5px)
 
 .close-btn 
     margin-left: 10px
@@ -272,7 +276,7 @@ body, html
 
 /* #endregion */
 
-textarea 
+.notepad 
     /* background: #3F2E3E */
     background-color: var(--background-color)
     backdrop-filter: blur(50px) saturate(200%) 
@@ -291,6 +295,12 @@ textarea
     resize: none 
     box-sizing: border-box
 
+[contenteditable=true]:empty:before
+    content: attr(placeholder)
+    color: rgba(0, 0, 0, 0.58)
+    pointer-events: none
+    display: block  //For Firefox 
+
 /* Settings */
 
 #settings-container 
@@ -298,15 +308,13 @@ textarea
     height: 70%
 
     box-sizing: border-box
-
     color: var(--text-color-UI)
     
     position: fixed
     z-index: 3
-    display: flex
+    display: none
     justify-content: center
     align-items: center
-
 
 #settings-panel
     width: 100%
@@ -316,7 +324,7 @@ textarea
 
     border-radius: 50px
 
-    display: none
+    display: flex
     justify-content: center
     flex-direction: row
     flex-wrap: wrap
@@ -444,9 +452,31 @@ textarea
                 border-radius: 25px
             &:hover
                 opacity: 1
+
+            &::-moz-range-thumb
+                -moz-appearance: none
+                background: black
+                height: 15px
+                width: 15px
+                outline: 0
+                border-radius: 25px
+            &::-moz-range-track
+                -moz-appearance: none
+                appearance: none
+                height: 5px
+                border-radius: 25px
+                margin: 1em 1em 1em 1em
+                outline: 0
+                border: 0
+                opacity: 0.7
+                width: fit-content
+
+                box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2)
+                mix-blend-mode: difference
+
             &::-moz-range-progress
-                -webkit-appearance: none
-                background: rgba(0, 0, 0, 0.2)
+                -moz-appearance: none
+                background: rgba(0, 0, 0, .8)
 
 
 /* Dark background */
